--- a/index.html
+++ b/index.html
@@ -20,39 +20,19 @@
         </div>
     </section>
     <section class="skins-section">
-        <h2>Available Skins</h2>
+        <h2>Available Downloads</h2>
         <div class="skins-gallery">
             <div class="skin-item">
-                <img src="skins/skin1.jpg" alt="Skin 1">
-                <a href="files/skin1.zip" download>Download Skin 1</a>
+                <p>A (feel) of 120Fps Gameplay</p>
+                <a href="files/Active[1].sav" download>Download Active[1].sav</a>
             </div>
             <div class="skin-item">
-                <img src="skins/skin2.jpg" alt="Skin 2">
-                <a href="files/skin2.zip" download>Download Skin 2</a>
+                <p>README.md</p>
+                <a href="files/README.md" download>Download README.md</a>
             </div>
             <div class="skin-item">
-                <img src="skins/skin3.jpg" alt="Skin 3">
-                <a href="files/skin3.zip" download>Download Skin 3</a>
-            </div>
-            <div class="skin-item">
-                <img src="skins/skin4.jpg" alt="Skin 4">
-                <a href="files/skin4.zip" download>Download Skin 4</a>
-            </div>
-            <div class="skin-item">
-                <img src="skins/skin5.jpg" alt="Skin 5">
-                <a href="files/skin5.zip" download>Download Skin 5</a>
-            </div>
-            <div class="skin-item">
-                <img src="skins/skin6.jpg" alt="Skin 6">
-                <a href="files/skin6.zip" download>Download Skin 6</a>
-            </div>
-            <div class="skin-item">
-                <img src="skins/skin7.jpg" alt="Skin 7">
-                <a href="files/skin7.zip" download>Download Skin 7</a>
-            </div>
-            <div class="skin-item">
-                <img src="skins/skin8.jpg" alt="Skin 8">
-                <a href="files/skin8.zip" download>Download Skin 8</a>
+                <p>Patch 3.6 Game File</p>
+                <a href="files/game_patch3.6.019560[1].pak" download>Download game_patch3.6.019560[1].pak</a>
             </div>
         </div>
     </section>
@@ -63,7 +43,9 @@
     </section>
     <footer>
         <p>Contact us: <a href="mailto:p1619076@gmail.com">p1619076@gmail.com</a></p>
+        <p>How to apply files? <br> Files/UE4Game/ShadowTrackerExtra/Saved/Paks/(Paste)</p>
         <p>© 2025 X力量遊戲. All rights reserved.</p>
+        <a href="feedback.html" class="btn">Give Feedback</a>
     </footer>
 </body>
 </html>
